# what4

./: .gitignore  .gitmodules  .hlint.yaml  .travis.yml  README.md  bv-sized-migration.md  cabal.project  cabal.project.ci
w2smt2/: w2smt2.cabal
w2smt2/app/: Main.hs
w2smt2/src/: W2SMT2.hs
w4smt2/: README.md  w4smt2.cabal
w4smt2/app/: Main.hs  UndefineMain.hs
w4smt2/bench/: Main.hs
w4smt2/bench/Benchmark/: CSV.hs  Config.hs  Discovery.hs  Output.hs  Runner.hs
w4smt2/src/: W4SMT2.hs
w4smt2/src/W4SMT2/: Exec.hs  Parser.hs  Pretty.hs  SExpPat.hs  Solve.hs  SomeExpr.hs  Unfold.hs
w4smt2/test/: Main.hs  Z3Verification.hs
w4smt2/test/golden/: bvneg-basic.smt2  bvnot-and-bvneg.smt2  bvnot-basic.smt2  bvnot-in-expr.smt2  comment.smt2  define-fun-bv.smt2  int-add.smt2  int-compare.smt2  int-mixed.smt2  int-nary.smt2  int-neg.smt2  int-unsat.smt2  let-basic.smt2  let-nested.smt2  neq-refl-int.smt2  real-add.smt2  real-compare.smt2  real-decimal.smt2  real-div.smt2  real-mixed-int.smt2  real-mixed-ops.smt2  real-mul.smt2  real-nary.smt2  real-neg.smt2  real-rational.smt2  real-sub.smt2  uninterp-mixed.smt2  uninterp-multi-arg.smt2  uninterp-single-arg.smt2  uninterp-zero-arity.smt2
w4smt2/test/qf-bv/: a8test0001.smt2  bvsdiv_div_by_zero.smt2  bvsrem_div_by_zero.smt2  bvudiv_div_by_zero.smt2  bvurem_div_by_zero.smt2  modulus_true-unreach-call_true-no-overflow.i_242.smt2
w4smt2/test/simpl/: define-fun-multi-param.smt2  define-fun-one-param.smt2  define-fun-zero-param.smt2  eq-refl-int.smt2  ite-false-int.smt2  ite-true-int.smt2  weighted-sum-subst.smt2
w4smt2/test/unfold/: mixed.out  mixed.smt2  multi-param.out  multi-param.smt2  nested-calls.out  nested-calls.smt2  recursive.out  recursive.smt2  zero-param.out
w4smt2/test/ux/: assert-requires-bool.smt2  define-fun-body-type-mismatch.out  define-fun-body-type-mismatch.smt2  expected-bool.out  expected-bool.smt2  not-requires-bool.out  not-requires-bool.smt2  type-mismatch-distinct.out  type-mismatch-distinct.smt2  type-mismatch-eq.out  type-mismatch-eq.smt2  uninterp-type-mismatch.out  uninterp-type-mismatch.smt2  unknown-command.out  unknown-command.smt2  unsupported-expr.out  unsupported-expr.smt2  unsupported-type.out  unsupported-type.smt2
what4/: CHANGES.md  README.md  solverBounds.config  what4.cabal
what4-blt/: what4-blt.cabal
what4-domains/: what4-domains.cabal
what4-domains/doc/: README.md  arithdomain.cry  bitsdomain.cry  bvdomain.cry  clp.cry  ffdomain.cry  strideddomain.cry  stridedinterval.cry  strides.cry  xordomain.cry
what4-domains/test/: BVDomTests.hs  CLP.hs  CLPPrecisionRegression.hs  PrecisionRegression.hs  StridedInterval.hs  Strides.hs  TestCoverage.hs
what4-domains/test/CLP/: Precision.hs  precision.csv
what4-domains/test/HH/: VerifyBindings.hs
what4-domains/test/PrecisionRegression/: Arith.hs  Bitwise.hs  CLP.hs  Common.hs  StridedInterval.hs  Strides.hs  arith.csv  bitwise.csv  clp.csv  si.csv  strides.csv
what4-domains/test/QC/: VerifyBindings.hs
what4-domains/test/StridedInterval/: Precision.hs
what4-domains/test/Strides/: Internal.hs  Precision.hs
what4-transition-system/: package.yaml  what4-transition-system.cabal
what4-transition-system/src/What4/: TransitionSystem.hs
what4-transition-system/test/: Main.hs  TransitionSystemTest.hs
what4/doc/: QuickStart.hs  Tutorial.hs  arithdomain.cry  bitsdomain.cry  bvdomain.cry  implementation.md  overview.md  xordomain.cry
what4/src/Test/: Verification.hs
what4/src/What4/: BaseTypes.hs  Concrete.hs  Concretize.hs  Config.hs  Equalities.hs  Expr.hs  ExprEqualities.hs  FloatMode.hs  FunctionName.hs  IndexLit.hs  Interface.hs  Internal.hs  InterpretedFloatingPoint.hs  LabeledPred.hs  Panic.hs  Partial.hs  ProblemFeatures.hs  ProgramLoc.hs  SFloat.hs  SWord.hs  SatResult.hs  SemiRing.hs  Solver.hs  SpecialFunctions.hs  Symbol.hs  UnionFind.hs  UnionFindF.hs  WordMap.hs
what4/test/: Abduct.hs  AdapterTest.hs  BVDomTests.hs  Bool.hs  BoolNormalization.hs  ConfigTest.hs  Equalities.hs  ExprBuilderSMTLib2.hs  ExprEqualities.hs  ExprsTest.hs  Fuzz.hs  GenWhat4Expr.hs  InvariantSynthesis.hs  IteExprs.hs  OnlineSolverTest.hs  PrinterTests.hs  ProbeSolvers.hs  SerializeTestUtils.hs  SerializeTests.hs  SolverParserTest.hs  SymFnTests.hs  TestTemplate.hs  UnionFind.hs  WeightedSum.hs
what4/test/HH/: BVDomTests.hs  VerifyBindings.hs
what4/test/QC/: VerifyBindings.hs
what4/test/responses/: err-behav-continue.exp  err-behav-continue.rsp  err-behav-unrec.exp  err-behav-unrec.rsp  error_bad.exp  error_bad.rsp  minisat_verbose_success.rsp  minisat_verbose_success.strict.exp  name.exp  name.rsp  rsnunk-bad.exp  rsnunk-bad.rsp  rsnunk-incomplete.exp  rsnunk-incomplete.rsp  rsnunk-memout.exp  rsnunk-memout.rsp  rsnunk-sexp.exp  rsnunk-sexp.rsp  sat.exp  success.exp  unknown.exp  unsat.exp  unsupported.exp  version.exp  version.rsp
who2/: README.md  who2.cabal
who2/src/Who2/: Builder.hs  Config.hs  Expr.hs  Internal.hs  Unsupported.hs
who2/test/: Main.hs
who2/test-data/functions/: def-fn-boolean-result.smt2  def-fn-mixed-with-uninterp.smt2  def-fn-nested-calls.smt2  def-fn-simple-add.smt2  def-fn-with-symbolic-args.smt2  fn-binary-bv16-to-bv16.smt2  fn-bv32-to-bool.smt2  fn-mixed-with-operations.smt2  fn-nested-application.smt2  fn-unary-bv8-to-bv8.smt2  fn-with-symbolic-args.smt2
who2/test-data/simpl/: and-contradiction.smt2  and-demorgan.smt2  and-false-left.smt2  and-false-right.smt2  and-idempotent.smt2  and-insert-contradiction.smt2  and-nested-contradiction.smt2  and-nested-flatten.smt2  and-three-way-contradiction.smt2  and-true-left.smt2  and-true-right.smt2  bvadd-combine-constants-left.smt2  bvadd-combine-constants-right.smt2  bvadd-combine-constants.smt2  bvadd-commutative.smt2  bvadd-const-simplify.smt2  bvadd-zero-left.smt2  bvadd-zero-right.smt2  bvand-idem.smt2  bvand-ones-left.smt2  bvand-ones-right.smt2  bvand-zero-left.smt2  bvand-zero-right.smt2  bvashr-zero.smt2  bvconcat-const.smt2  bvite-false.smt2  bvite-same.smt2  bvite-true.smt2  bvlshr-zero.smt2  bvmul-commutative.smt2  bvmul-const.smt2  (+83 more)
(+221 files in other folders)
