Cabal-version: 2.2
Name:          what4-blt
Version:       0.2
Author:        Galois Inc.
Maintainer:    rdockins@galois.com
Copyright:     (c) Galois, Inc 2014-2021
License:       BSD-3-Clause
License-file:  LICENSE
Build-type:    Simple
Category:      Language
Synopsis:      What4 bindings to BLT
Description:
  BLT is a library the solves bounded integer linear programs by
  reducing the problem to bounded lattice search.  This package
  provides support for lowering Crucible formulae to linear systems
  of the sort understood by BLT, and for executing the underlying solver.

common bldflags
  ghc-options: -Wall
               -Werror=incomplete-patterns
               -Werror=missing-methods
               -Werror=overlapping-patterns
  ghc-prof-options: -fprof-auto-export
  default-language: Haskell2010

library
  import: bldflags
  build-depends:
    base >= 4.7 && < 4.20,
    blt >= 0.12.1,
    containers,
    what4 >= 0.4,
    lens >= 1.2,
    parameterized-utils,
    prettyprinter >= 1.7.0,
    text,
    transformers

  hs-source-dirs: src

  exposed-modules:
    What4.Solver.BLT

test-suite test
  import: bldflags
  type: exitcode-stdio-1.0
  hs-source-dirs: test

  main-is: Test.hs

  build-depends:
    base,
    containers,
    what4-blt,
    QuickCheck,
    tasty            >= 0.10,
    tasty-hunit      >= 0.9,
    tasty-quickcheck >= 0.8,
    blt
