cabal-version: 3.0
name:          what4-transition-system
version:       0.0.3.0
synopsis:      Generates transition systems from What4 descriptions
description:   Generates transition systems from What4 descriptions
author:        Valentin Robert <val@galois.com>
maintainer:    Valentin Robert <val@galois.com>
copyright:     Galois, Inc. 2020-2021
license:       BSD-3-Clause
license-file:  LICENSE
build-type:    Simple

common dependencies
  build-depends:
    , ansi-wl-pprint       ^>=0.6
    , base                 >=4.12 && <4.20
    , bytestring
    , containers           ^>=0.6
    , io-streams
    , lens
    , parameterized-utils  >=2.0  && <2.2
    , text
    , what4                ^>=1.5

library
  import:           dependencies
  exposed-modules:
    What4.TransitionSystem

  other-modules:    Paths_what4_transition_system
  hs-source-dirs:   src
  ghc-options:
    -Wall -Werror=incomplete-patterns -Werror=missing-methods
    -Werror=overlapping-patterns

  default-language: Haskell2010
